DockerVersion/src/main/java/com/example/dockerversion/error/CourierNotFoundException.java
package com.example.dockerversion.error;

public class CourierNotFoundException extends RuntimeException{
    public CourierNotFoundException() {
        super("Courier not found!");
    }
}
